@@ -69,9 +69,11 @@ volatile update_scene_t update_scene;
 volatile update_pi_t update_pi;
 volatile update_kill_t update_kill;
 volatile update_mute_t update_mute;
+volatile update_input_t update_input;
 
 volatile run_script_t run_script;
 
+volatile uint8_t input_states[8];
 
 const char * to_v(int16_t);
 
@@ -792,10 +794,11 @@ static void op_KILL(void);
 static void op_MUTE(void);
 static void op_UNMUTE(void);
 static void op_SCALE(void);
+static void op_STATE(void);
 
 
 #define MAKEOP(name, params, returns, doc) {#name, op_ ## name, params, returns, doc}
-#define OPS 52
+#define OPS 53
 // DO NOT INSERT in the middle. there's a hack in validate() for P and PN
 static const tele_op_t tele_ops[OPS] = {
 	MAKEOP(ADD, 2, 1,"[A B] ADD A TO B"),
@@ -849,7 +852,8 @@ static const tele_op_t tele_ops[OPS] = {
 	MAKEOP(KILL, 0, 0,"CLEAR DELAYS, STACK, SLEW"),
 	MAKEOP(MUTE, 1, 0,"MUTE INPUT"),
 	MAKEOP(UNMUTE, 1, 0,"UNMUTE INPUT"),
-	MAKEOP(SCALE, 5, 1,"SCALE NUMBER RANGES")
+	MAKEOP(SCALE, 5, 1,"SCALE NUMBER RANGES"),
+	MAKEOP(STATE, 1, 1,"GET INPUT STATE")
 };
 
 static void op_ADD() {
@@ -1257,6 +1261,15 @@ static void op_SCALE() {
 	i = pop();
 
 	push(i * (y-x) / (b-a));
+}
+static void op_STATE() {
+	int16_t a = pop();
+	a--;
+	if(a<0) a=0;
+	else if(a>7) a=7;
+
+	(*update_input)(a);
+	push(input_states[a]);	
 }
 
 
