@@ -9,6 +9,7 @@ v1.1	NEW usb flash drive read/write
 		NEW screen indication in live mode for MUTE status
 		NEW SCALE OP for scaling number from one range to another
 		NEW JI OP just intonation helper
+		NEW STATE OP to read current state of input triggers 1-8 (low/high = 0/1)
 		NEW keypad executes scripts (works for standalone usb keypads and full-sized keyboards)
 		NEW KILL OP clears delays, stack, cv slews, pulses
 		NEW hotkey meta+ESC executes KILL
